<resources>
    <string name="app_name">projeto</string>
    <string name="what_your_problem">Qual o seu problema?</string>
    <string name="where_you">Onde você está?</string>
    <string name="send">Enviar</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="user">Usuário</string>
    <string name="validate_error">Preencha os campos corretamente</string>
    <string name="user_not_registered">Usuário não cadastrado</string>
    <string name="invalid_password">Senha incorreta</string>
    <string name="input_the_valid_user">Digite um usuário válido</string>
    <string name="input_password_valid">Digite uma senha válida</string>
    <string name="not_exists_problems_yet">Ainda não existem suportes</string>
</resources>
